# my-project

./: EDA.ipynb  README.md  api_reader.py  data_loader.py  data_parser.py  environment.yml  pyproject.toml  requirements.txt  write_to_db.py
api_example/: README.md  api_reader.py
etl/: extract.py  load.py  main.py  transform.py  validate.py
notebooks/: README.md
parse_example/: README.md  data_parser.py
