[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "ETL pipeline: extract, transform, load, and validate CSV data."
authors = [
  { name = "Karina" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "python-dateutil>=2.9.0",
  "pytz>=2025.2",
  "six>=1.17.0",
  "tzdata>=2025.2"
]

[project.scripts]
etl = "etl.main:main"